--- a/test-output/SparkReport/Spark.html
+++ b/test-output/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Grasshopper Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">May 15, 2021 09:16:50 PM</span></a>
+<a href="#"><span class="badge badge-primary">May 17, 2021 11:54:06 AM</span></a>
 </li>
 </ul>
 </div>
@@ -57,6 +57,11 @@
 <span class="ico"><i class="fa fa-tag"></i></span>
 </a>
 </li>
+<li class="nav-item dropdown" onclick="toggleView('exception-view')">
+<a id="nav-exception" class="dropdown-toggle" href="#">
+<span class="ico"><i class="fa fa-bug"></i></span>
+</a>
+</li>
 </ul>
 </div>
 </div>      <div class="vcontainer">
@@ -66,13 +71,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>May 15, 2021 09:16:50 PM</h3>
+<h3>May 17, 2021 11:54:06 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>May 15, 2021 09:16:51 PM</h3>
+<h3>May 17, 2021 11:54:44 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -84,7 +89,7 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-fail">Features Failed</p>
-<h3>0</h3>
+<h3>1</h3>
 </div></div>
 </div>
 </div>
@@ -100,12 +105,12 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'>
+<div><small data-tooltip='50%'>
 <b>1</b> features passed
 </small>
 </div>
 <div>
-<small data-tooltip='0%'><b>0</b> features failed,
+<small data-tooltip='50%'><b>1</b> features failed,
 <b>0</b> skipped, <b data-tooltip='0%'>0</b> others
 </small>
 </div>
@@ -123,9 +128,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
+<div><small data-tooltip='66%'><b>2</b> scenarios passed</small></div>
 <div>
-<small data-tooltip='0%'><b>0</b> scenarios failed,
+<small data-tooltip='33%'><b>1</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -143,10 +148,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>4</b> steps passed</small></div>
+<div><small data-tooltip='84%'><b>11</b> steps passed</small></div>
 <div>
-<small data-tooltip='0%'><b>0</b> steps failed,
-<b>0</b> skipped, <b data-tooltip='%'>0</b> others
+<small data-tooltip='7%'><b>1</b> steps failed,
+<b>1</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
 </div>
@@ -162,7 +167,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login to Salesforce Lightning Custom Automation Practice Application":0.04
+"Account page":16.89,"Login Feature":20.524
 };
 </script>
 <div class="row">
@@ -173,11 +178,11 @@ var timeline = {
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
 <td>@Smoke</td>
+<td>3</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
-<td>0</td>
-<td>100%</td>
+<td>75%</td>
 </tr>
 </tbody>
 </table></div>
@@ -215,20 +220,20 @@ var timeline = {
 var statusGroup = {
 parentCount: 5,
 passParent: 1,
-failParent: 0,
+failParent: 1,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 1,
-failChild: 0,
+passChild: 2,
+failChild: 1,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 4,
-failGrandChild: 0,
+passGrandChild: 11,
+failGrandChild: 1,
 warningGrandChild: 0,
-skipGrandChild: 0,
+skipGrandChild: 1,
 infoGrandChild: 0,
 eventsCount: 5,
 };
@@ -243,6 +248,7 @@ eventsCount: 5,
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation-circle"></i></a>
 <ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
 <a class="dropdown-item" status="pass" href="#"><span>Pass</span><span class="status success"></span></a>
+<a class="dropdown-item" status="fail" href="#"><span>Fail</span><span class="status danger"></span></a>
 <div class="dropdown-divider"></div>
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
@@ -258,12 +264,12 @@ eventsCount: 5,
       <ul class="test-list-item">
         <li class="test-item"  status="pass" test-id="1"
           author=""
-          tag=""
+          tag="@Smoke"
           device="">
           <div class="test-detail">
-            <p class="name">Login to Salesforce Lightning Custom Automation Practice Application</p>
+            <p class="name">Account page</p>
             <p class="text-sm">
-              <span>21:16:51 PM</span> / <span>00:00:00:040</span>
+              <span>11:54:07 AM</span> / <span>00:00:16:890</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -271,11 +277,73 @@ eventsCount: 5,
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Login to Salesforce Lightning Custom Automation Practice Application</h5>
-<span class='badge badge-success'>05.15.2021 21:16:51</span>
-<span class='badge badge-danger'>05.15.2021 21:16:51</span>
-<span class='badge badge-default'>00:00:00:040</span>
+<h5 class="test-status text-pass">Account page</h5>
+<span class='badge badge-success'>05.17.2021 11:54:07</span>
+<span class='badge badge-danger'>05.17.2021 11:54:24</span>
+<span class='badge badge-default'>00:00:16:890</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
+</div>
+<div class="m-t-15"><span class="badge badge-pill badge-default">@Smoke</span></div>
+<div class="m-t-10 m-l-5"></div>
+</div>
+</div>
+<div class="accordion mt-4">
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Account page Title</div>
+      </div>
+    </div>
+        <div class="collapse">
+          <div class="card-body">
+              <div class="step pass-bg" title="stepdefinitions.AccountPageSteps.user_already_logged_in_to_the_application_successfully(io.cucumber.datatable.DataTable)">
+                <span>When User already logged in to the application successfully</span>
+      <div><table class='markup-table table '><tr><td>userName</td><td>passWord</td></tr><tr><td>sitaram.rajpootsr@gmail.com</td><td>Automation$1234</td></tr></table>
+      </div>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepdefinitions.AccountPageSteps.user_is_on_account_page()">
+                <span>Given User is on Account page</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepdefinitions.AccountPageSteps.get_the_account_page_title()">
+                <span>When Get the Account page Title</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepdefinitions.AccountPageSteps.verify_account_page_title_should_be(java.lang.String)">
+                <span>Then Verify Account page Title should be "My account - My Store"</span>
+      <div>
+      </div>
+              </div>
+          </div>
+        </div>
+  </div>
+</div>
+          </div>
+        </li>
+        <li class="test-item"  status="fail" test-id="11"
+          author=""
+          tag=""
+          device="">
+          <div class="test-detail">
+            <p class="name">Login Feature</p>
+            <p class="text-sm">
+              <span>11:54:24 AM</span> / <span>00:00:20:524</span>
+              <span class="badge fail-bg log float-right">Fail</span>
+            </p>
+          </div>
+          <div class="test-contents d-none">
+<div class="detail-head">
+<div class="p-v-10">
+<div class="info">
+<h5 class="test-status text-fail">Login Feature</h5>
+<span class='badge badge-success'>05.17.2021 11:54:24</span>
+<span class='badge badge-danger'>05.17.2021 11:54:44</span>
+<span class='badge badge-default'>00:00:20:524</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=11</span>
 </div>
 <div class="m-t-10 m-l-5"></div>
 </div>
@@ -284,28 +352,79 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Login to Custom Automation Practice Application with Valid Credential</div>
+        <div class="node" id="12"><span class="badge log pass-bg mr-2">Pass</span>Verify Forget Password Link</div>
       </div>
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="stepdefinitions.LoginTest.open_browser_and_enter_custom_automation_practice_application_url()">
-                <span>Given Open Browser and Enter Custom Automation Practice Application Url</span>
+              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_is_on_login_page()">
+                <span>Given User is on Login page</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginTest.enter_the_and(java.lang.String,java.lang.String)">
-                <span>When Enter the "userName" and "passWord"</span>
+              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.verify_forget_password_link_is_visible()">
+                <span>When Verify Forget password link is visible</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginTest.click_on_sign_in_button()">
-                <span>And Click on Sign in button</span>
+          </div>
+        </div>
+  </div>
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="19"><span class="badge log fail-bg mr-2">Fail</span>Login with Correct Credentials</div>
+          <div class="status-avatar float-right mr-4">
+            <i class="fa fa-paperclip"></i>
+          </div>
+      </div>
+    </div>
+        <div class="">
+          <div class="card-body">
+              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_is_on_login_page()">
+                <span>Given User is on Login page</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepdefinitions.LoginTest.verify_title_once_user_logged_in_successfully_on_the_application()">
-                <span>Then Verify Title Once User Logged in Successfully on the application</span>
+              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_enter_usern_name(java.lang.String)">
+                <span>When User enter usernName "sitaram.rajpootsr@gmail.com"</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_enter_password(java.lang.String)">
+                <span>And User enter Password "Automation$1234"</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepdefinitions.LoginPageSteps.user_click_on_sign_in_button()">
+                <span>And User Click on Sign in button</span>
+      <div>
+      </div>
+              </div>
+              <div class="step fail-bg" title="stepdefinitions.LoginPageSteps.verify_Account_page_title()">
+                <span>Then Verify Account page Title</span>
+      <div>
+        <textarea disabled class="code-block">java.lang.AssertionError: Explicitly failed
+	at org.junit.Assert.fail(Assert.java:89)
+	at stepdefinitions.LoginPageSteps.verify_Account_page_title(LoginPageSteps.java:61)
+	at ✽.Verify Account page Title(file:///D:/Learning/TestAutomation/bdd-cucumber/src/test/resources/appfeatures/Login.feature:18)
+</textarea>
+      
+      </div>
+              </div>
+              <div class="step skip-bg" title="stepdefinitions.LoginPageSteps.account_page_title_should_be(java.lang.String)">
+                <span>And Account page Title should be "My account - My Store"</span>
+      <div>Step skipped
+      </div>
+              </div>
+              <div class="step pass-bg" title="AFTER">
+                <span>apphooks.AppHooks.tearDown(io.cucumber.java.Scenario)</span>
+      <div>Login_with_Correct_Credentials
+          <div class="row mb-3"><div class="col-md-3">
+    <img data-featherlight='../embedded1.png' src="../embedded1.png">
+    
+    </div></div>
+</div>
       <div>
       </div>
               </div>
@@ -335,15 +454,17 @@ eventsCount: 5,
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log pass-bg'>1</span>
+<span class='badge log pass-bg'>3</span>
+<span class='badge log badge-danger'>1</span>
 </span>
 <p class="name">@Smoke</p>
-<p class="duration text-sm">1 tests</p>
+<p class="duration text-sm">4 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
 <h4>@Smoke</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
+<span status="pass" class='badge log pass-bg'>3 passed</span>
+<span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -356,11 +477,90 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>21:16:51 PM</td>
+<td>11:54:07 AM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>Login to Custom Automation Practice Application with Valid Credential</a>
+<a href="#" class="linked" test-id='1' id='1'>Account page</a>
+</td>
+</tr>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>11:54:07 AM</td>
+<td>
+<a href="#" class="linked" test-id='1' id='2'>Account page Title</a>
 <div class="">
-<span class="badge badge-default">Login to Salesforce Lightning Custom Automation Practice Application.Login to Custom Automation Practice Application with Valid Credential</span>
+<span class="badge badge-default">Account page.Account page Title</span>
+</div>
+</td>
+</tr>
+<tr class="tag-test-status" status="pass">
+<td><span class="badge log pass-bg">Pass</span></td>
+<td>11:54:24 AM</td>
+<td>
+<a href="#" class="linked" test-id='11' id='12'>Verify Forget Password Link</a>
+<div class="">
+<span class="badge badge-default">Login Feature.Verify Forget Password Link</span>
+</div>
+</td>
+</tr>
+<tr class="tag-test-status" status="fail">
+<td><span class="badge log fail-bg">Fail</span></td>
+<td>11:54:32 AM</td>
+<td>
+<a href="#" class="linked" test-id='11' id='19'>Login with Correct Credentials</a>
+<div class="">
+<span class="badge badge-default">Login Feature.Login with Correct Credentials</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="test-content scrollable">
+<div class="test-content-detail">
+<div class="detail-body"></div>
+</div>
+</div>
+</div><div class="test-wrapper row view exception-view attributes-view">
+<div class="test-list">
+<div class="test-list-tools">
+<ul class="tools pull-left"><li><a href=""><span class="font-size-14">Exception</span></a></li></ul>
+<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
+</div>
+<div class="test-list-wrapper scrollable">
+<ul class="test-list-item">
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log badge-danger'>1</span>
+</span>
+<p class="name">java.lang.AssertionError</p>
+<p class="duration text-sm">1 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>java.lang.AssertionError</h4>
+<span status="fail" class='badge log badge-danger'>1 failed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="fail">
+<td><span class="badge log fail-bg">Fail</span></td>
+<td>11:54:43 AM</td>
+<td>
+<a href="#" class="linked" test-id='11' id='26'>Then Verify Account page Title</a>
+<div class="">
+<span class="badge badge-default">Login Feature.Login with Correct Credentials.Then Verify Account page Title</span>
 </div>
 </td>
 </tr>
